@@ -1,3 +1,7 @@
+1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* GammaDist.m: Include misc.h instead of math.h.
+
 1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am: Remove addition of -Wno-protocol to CPPFLAGS.
